# OOP_labs

./: README.md
Task6/: constants.h  graphic.cpp  graphic.h  untitled.pro
Task_1/src/: CMakeLists.txt  cell.cpp  cell.h  main.cpp
Task_5/: Task_5.pro  constants.h  func.cpp  func.h  graphic.cpp  graphic.h  graphic.ui  main.cpp
task4/: CMakeLists.txt  CSVParser.h  main.cpp
task_0/src/: CMakeLists.txt  main.cpp  words_counter.cpp  words_counter.h
task_2/src/: CMakeLists.txt  main.cpp
task_3/src/: data.cpp  data.h  functions.cpp  functions.h  table.h  tree.cpp  tree.h
